Change Log:
=============================
- DanbooruDownloader20131122
  - Add starting page for download by tags.
  - Update Logging logic.
  - Add option to hide image containing Blacklisted tag.
  - Update Sankaku Tag download.

- DanbooruDownloader20131019
  - Update cookie handling.
  - Update WebClient to enable compression.
  - Update WebClient to add Accept Language header.
  - Update UrlResolver to use Queue.
  - Fix Download Tag form.

- DanbooruDownloader20130929
  - Add tag parser for Sankaku Complex.
  - Fix Form Provider save feature.
  - Use short version for rating for Sankaku Complex.
  - Fix batch job xml loading.

- DanbooruDownloader20130922
  - Add option to use per-provider tags.xml or global tags.xml
  - Add color for Unknown tags.
  - Update SankakuParser.
  - Fix Tag Blacklist.

- DanbooruDownloader20130706
  - Fix null reference error when updating tags from danbooru with loop tick.
  - Add configuration upgrade handler.
  - Add cookie viewer.

- DanbooruDownloader20130630
  - Add use cookie flag.
  - Update DownloadTag to support danbooru by using loop.
  - Add Clear Completed download button in Download List.
  - Marked green color for completed download and red for error.
  - and fixes.

- DanbooruDownloader20130223
  - Fix save/load download list.
  - Add save/load batch job list.

- DanbooruDownloader20130201
  - Fix unhandled exception for copy log if no selected text.
  - Fix unhandled exception if downloading from Sankaku.
  - Fix blacklist tag function.

- DanbooruDownloader20130126
  - Add delay for retrying.
  - Add page/list dumping if encounter exception.

- DanbooruDownloader20130119
  - Add Gelbooru HTML parser.
  - Add new provider: lolibooru.
  - Update prev/next button logic.

- DanbooruDownloader20130112
  - Add Prev/Next page button.
  - Add new provider: NIS ImageBoard and 3dBooru.
  - Fix file_url didn't auto-resolve when added using right-click in Main tab.

- DanbooruDownloader20130101